# memory-sanitizer-benchmark

./: CMakeLists.txt  README.md  build.sh  format-logs.sh  suppressions-2017.txt  test.sh
defaults/: inspector-2016-mi2.txt  inspector-2018-mi3.txt  inspector-2019-mi3.txt  inspector-2020-mi2.txt
docs/: analysis.md
src/alloc/: mismatch-malloc-delete-array.cpp  mismatch-malloc-delete.cpp  mismatch-new-array-delete.cpp  mismatch-new-array-free.cpp  mismatch-new-delete-array.cpp  mismatch-new-free.cpp  missing-delete-array.cpp  missing-delete.cpp  missing-free.cpp  use-after-delete.cpp  use-after-free.cpp
src/misc/: stack-use-after-return.cpp
src/out-of-bounds-read/: global-after-end.cpp  global-before-begin.cpp  heap-after-end.cpp  heap-before-begin.cpp  stack-after-end-consecutive.cpp  stack-after-end.cpp  stack-before-begin-consecutive.cpp  stack-before-begin.cpp  struct-next-field.cpp
src/out-of-bounds-write/: global-after-end.cpp  global-before-begin.cpp  heap-after-end.cpp  heap-before-begin.cpp  stack-after-end-consecutive.cpp  stack-after-end.cpp  stack-before-begin-consecutive.cpp  stack-before-begin.cpp  struct-next-field.cpp
src/pass/: simd.cpp
src/uninitialized-read/: bit.cpp  heap-variable.cpp  malloc-variable.cpp  stack-variable.cpp
